VSE: strip - separate images [Y] dialog "image duration" missing #33293

Closed
opened 2012-11-24 22:59:23 +01:00 by Frank Bolder · 4 comments

%%%In the VSE the function strip - separate images [shortcut Y] used to show a dialog (in blender 2.4x) "image duration" where you can enter the actual frame count for each image separated. This is missing in 2.64. All images get 1 frame.

Blender 2.64
Windows 7 professional 64bit%%%

%%%In the VSE the function strip - separate images [shortcut Y] used to show a dialog (in blender 2.4x) "image duration" where you can enter the actual frame count for each image separated. This is missing in 2.64. All images get 1 frame. Blender 2.64 Windows 7 professional 64bit%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This is showing the need for an operator redo panel in other spaces, UV window has this issue too.

If you press F6 you can adjust this setting but this is not really a good solution.%%%

%%%This is showing the need for an operator redo panel in other spaces, UV window has this issue too. If you press F6 you can adjust this setting but this is not really a good solution.%%%

%%%Fixed in svn rev52572.

Having redo panel could be handy here, but that's more like a usability TODO.

Thanks for the report, closing now.%%%

%%%Fixed in svn rev52572. Having redo panel could be handy here, but that's more like a usability TODO. Thanks for the report, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33293
No description provided.