Fix #33293L VSE: strip - separate images [Y] dialog "image duration" missing